@@ -3,12 +3,14 @@
 
 1.8-10
 
-* 'multinom' family implemented for multinomial logistic regression.
+** 'multinom' family implemented for multinomial logistic regression.
 
 * with bam(...,discrete=TRUE) terms like s(a,b,bs="re") had wrong p-value 
   computation applied, as a result of being treated as tensor product terms.
   Fixed.
 
+* minor tweak to soap basis setup to avoid rounding error leading to 'approx'
+  occasionally producing NA's with fixed boundaries.
 
 1.8-9
 
@@ -128,7 +130,7 @@
 * New German translation thanks to Detlef Steuer.
 
 * plot.gam now silently returns a list of plotting data, to help advanced 
-  users (Fabian Scheipl) to produce custimized plot.
+  users (Fabian Scheipl) to produce customized plot.
 
 * bam can now set up an object suitable for fitting, but not actually do
   the fit, following a suggestion by Fabian Scheipl. See arguments 'fit' 
